--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="content">
-		<h1>Tic Tac Toe</h1>
+		<h1>Triqui</h1>
 
 		<div class="marker">
 			<div class="marker-item">
